# FutureSDR

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  build.rs  check.sh  config.toml  rust-analyzer.toml
.cargo/: config.toml
crates/futuredsp/: Cargo.toml  README.md  build.rs
crates/futuredsp/benches/: benchmarks.rs
crates/futuredsp/src/: decimating_fir.rs  fir.rs  firdes.rs  iir.rs  lib.rs  polyphase_resampling_fir.rs  rotator.rs  taps.rs  tapsaccessor.rs  windows.rs
crates/futuredsp/src/firdes/: basic.rs  mod.rs  remez.rs  remez_impl.rs
crates/futuredsp/src/math/: mod.rs  special_funs.rs
crates/futuredsp/src/mmse/: fir_interpolator.rs  mod.rs  resampler.rs  taps.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: lib.rs
crates/prophecy/: Cargo.toml  README.md  index.html  tailwind.config.js
crates/prophecy/crates/flowgraphs/: Cargo.toml
crates/prophecy/src/: array_view.rs  constellation_sink.rs  constellation_sink_density.rs  constellation_sink_glow.rs  flowgraph_canvas.rs  flowgraph_mermaid.rs  flowgraph_table.rs  handle.rs  lib.rs  list_selector.rs  main.rs  pmt.rs  radio_selector.rs  slider.rs  time_sink.rs  waterfall.rs
crates/remote/: Cargo.toml  README.md
crates/remote/examples/: demo.rs  flowgraphs.rs
crates/remote/src/: lib.rs  remote.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: block_id.rs  block_port_id.rs  description.rs  flowgraph_id.rs  lib.rs  pmt.rs  port_id.rs  seify.rs
examples/adsb/: Cargo.toml  Gulpfile.js  README.md  config.toml  package.json  serve.py
examples/adsb/assets/static/: index.html  script.js
examples/adsb/src/: decoder.rs  demodulator.rs  lib.rs  preamble_detector.rs  tracker.rs
examples/agc/: Cargo.toml  audio_agc.rs
examples/android/: .gitignore  Cargo.toml  README.md  build.sh  config.toml  env.sh  plot.py
examples/android/.cargo/: config.toml
examples/android/FutureSDR/: build.gradle  gradle.properties  settings.gradle
examples/android/FutureSDR/app/: build.gradle
examples/android/src/: lib.rs  main.rs
examples/audio/: Cargo.toml  README.md  compare_oscillators.rs  loopback.rs  play_file.rs  play_selectable_tone.rs  play_stereo.rs  play_tone.rs
examples/burn/: .gitignore  Cargo.toml  config.toml  plot.py  split.py  split_test.py
examples/burn/model/: config.json
examples/burn/src/: dataset.rs  fft.rs  lib.rs  main.rs  model.rs  simple_cnn.rs  simple_model.rs  time_it.rs
examples/cw/: Cargo.toml  Gulpfile.js  Makefile  README.md  Trunk.toml  config.toml  index.html  listen_cw.rs  package.json
examples/cw/.cargo/: config.toml
examples/cw/assets/static/: index.html
examples/cw/src/: bb_to_cw.rs  char_to_cw.rs  cw_to_char.rs  cw_to_iq.rs  iq_to_cw.rs  lib.rs  rx_audio.rs  tx_audio.rs
examples/debug/: Cargo.toml  README.md  oscillators.grc  oscillators.py  oscillators.rs  panic.rs  tag_debug.rs
examples/egui/: Cargo.toml  README.md
examples/egui/src/: channel_sink.rs  keep_1_in_n.rs  lib.rs
examples/file-trx/: Cargo.toml  README.md  rx.rs  tx.rs
examples/fm-receiver/: Cargo.toml  README.md  config.toml  fm_receiver.rs  launch.json
examples/fm-receiver/src/: main.rs
examples/gui/: Cargo.toml
examples/gui/src/: basic.rs  detached.rs
examples/keyfob/: Cargo.toml  README.md
examples/keyfob/src/: decoder.rs  lib.rs  main.rs
examples/lora/: Cargo.toml  README.md  meshtastic_rx.py
examples/lora/src/: decoder.rs  default_values.rs  deinterleaver.rs  encoder.rs  fft_demod.rs  frame_sync.rs  gray_mapping.rs  hamming_dec.rs  header_decoder.rs  lib.rs  meshtastic.rs  modulator.rs  packet_forwarder_client.rs  stream_adder.rs  transmitter.rs  utilities.rs  utils.rs
examples/rattlegram/: .gitignore  Cargo.toml  README.md  Trunk.toml  build.sh  index.html
examples/rattlegram/.cargo/: config.toml
examples/rattlegram/assets/: decoder-node.js  decoder-processor.js  decoder-processor.js.bu  setup-decoder.js  text-encoder.js  wasm-decoder.js  wasm-decoder_bg.js  wasm-decoder_bg.wasm
examples/rattlegram/src/: bch.rs  decoder.rs  encoder.rs  lib.rs  mls.rs  osd.rs  polar.rs  psk.rs  util.rs  wasm.rs  wasm_decoder.rs  wasm_tx.rs  xorshift.rs
examples/rattlegram/worklet/: wasm-decoder.js  wasm-decoder_bg.wasm
examples/sdr/: Cargo.toml  build.rs  wbfm.rs  wrapper.h
examples/spectrum/: Cargo.toml  Gulpfile.js  Makefile  README.md  Trunk-web.toml  config.toml  index-web.html  index.html  package.json  tailwind.config.js
examples/spectrum/.cargo/: config.toml
examples/spectrum/assets/css/: futuresdr.scss
examples/spectrum/assets/static/: hackrf_open.js  hackrf_open.wasm  hackrf_open.wasm.map  hackrf_open.worker.js  index.html  myworker.js  rtl_open.html  rtl_open.js  rtl_open.wasm  rtl_open.wasm.map  rtl_open.worker.js  rtl_open2.html  worker.js
examples/spectrum/src/: fft_shift.rs  keep_1_in_n.rs  lib.rs  main.rs  vulkan.rs  wasm.rs
examples/spectrum/src/wasm/: frontend.rs  mod.rs  web.rs
examples/ssb/: .gitignore  Cargo.toml  Makefile  README.md  receive.rs  ssbdecoder.py  transmit.rs
examples/ssb-receiver/: .gitignore  Cargo.toml  Makefile  README.md  play_ssb.rs  ssb-decoder.grc  ssbdecoder.py
examples/transfer/: Cargo.toml
examples/transfer/src/: main.rs
frontend/: .gitignore  Cargo.toml  Gulpfile.js  Makefile  package-lock.json  package.json
frontend/assets/css/: futuresdr.scss
frontend/assets/static/: index.html  lol.html  spectrum3d.html
frontend/assets/static/shaders/: sonogram-fragment.shader  sonogram-vertex.shader
frontend/src/: kitchen_sink.rs  lib.rs
frontend/src/ctrl_port/: call.rs  flowgraph.rs  mermaid.rs  mod.rs  poll.rs  poll_periodic.rs  radio.rs  slider.rs
frontend/src/gui/: frequency.rs  mod.rs  time.rs
futuredsp/: Cargo.toml
futuredsp/benches/: benchmarks.rs
futuredsp/src/: fir.rs  firdes.rs  iir.rs  kernel.rs  lib.rs  tapsaccessor.rs  windows.rs
futuredsp/src/math/: consts.rs  mod.rs  special_funs.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
pmt/: Cargo.toml
pmt/src/: lib.rs
(+614 files in other folders)
