[package]
name = "futuresdr"
version = "0.0.37"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
edition = "2021"
rust-version = "1.64"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/futuresdr/"
readme = "README.md"
description = "An Experimental Async SDR Runtime for Heterogeneous Architectures."
keywords = ["sdr", "radio", "runtime", "async", "acceleration"]
categories = [
  "asynchronous",
  "concurrency",
  "hardware-support",
  "science",
  "wasm",
]

[workspace]
members = [".", "crates/futuredsp", "crates/macros", "crates/types"]

[features]
default = ["tracing_max_level_debug", "tracing_release_max_level_info"]
aaronia_http = ["seify/aaronia_http"]
audio = ["dep:cpal", "dep:hound", "dep:rodio"]
flow_scheduler = []
hackrf = ["seify/hackrfone"]
rtlsdr = ["seify/rtlsdr"]
seify = ["dep:seify", "futuresdr-types/seify"]
seify_dummy = ["seify/dummy"]
soapy = ["seify/soapy"]
tpb_scheduler = []
tracing_max_level_debug = ["tracing/max_level_debug"]
tracing_release_max_level_info = ["tracing/release_max_level_info"]
vulkan = ["dep:vulkano", "dep:ouroboros"]
wgpu = ["dep:wgpu"]
zeromq = ["dep:zmq"]
zynq = ["dep:xilinx-dma"]

[[bench]]
name = "flowgraph"
harness = false

[[bench]]
name = "apply"
harness = false

[[test]]
name = "flowgraph"
required-features = ["flow_scheduler"]

[[test]]
name = "vulkan"
required-features = ["vulkan"]

[[test]]
name = "tpb"
required-features = ["tpb_scheduler"]

[[test]]
name = "seify"
required-features = ["seify_dummy"]

[dependencies]
anyhow = "1.0"
async-lock = "3.4"
async-trait = "0.1"
config = "0.15"
dirs = "6.0"
dyn-clone = "1.0"
futures = "0.3"
futures-lite = "2.6"
futuredsp = { path = "crates/futuredsp", version = "0.0.6" }
futuresdr-macros = { path = "crates/macros", version = "0.0.7" }
futuresdr-types = { path = "crates/types", version = "0.0.12" }
num-complex = "0.4"
num-integer = "0.1"
num_cpus = "1.16"
once_cell = "1.19"
rustfft = "6.2"
seify = { version = "0.16", default-features = false, optional = true }
slab = "0.4"
spin = "0.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = { version = "0.1", features = ["log"] }
web-time = { version = "1.1" }
wgpu = { version = "0.20", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.15", optional = true, features = ['wasm-bindgen'] }
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-net = { version = "0.6", default-features = false, features = [
  "websocket",
  "json",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
rodio = { version = "0.20", default-features = false, optional = true }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-executor = "1.12"
async-fs = "2.1"
async-io = "2.3"
async-native-tls = { version = "0.5", optional = true }
async-net = "2.0"
async-task = "4.7"
async-tungstenite = "0.29"
axum = "0.8"
blocking = "1.6"
concurrent-queue = "2.5"
core_affinity = "0.8"
cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }
libc = "0.2"
ouroboros = { version = "0.18", optional = true }
rodio = { version = "0.20", default-features = false, features = [
  "symphonia-all",
], optional = true }
tokio = { version = "1", features = ["rt"] }
tower-http = { version = "0.6", features = ["add-extension", "cors", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
vmcircbuffer = "0.0.10"
vulkano = { version = "0.35", optional = true }
zmq = { version = "0.10", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
xilinx-dma = { version = "0.0.10", features = ["async"], optional = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Navigator',
  'Node',
  'Usb',
  'UsbConfiguration',
  'UsbControlTransferParameters',
  'UsbDevice',
  'UsbDeviceFilter',
  'UsbDeviceRequestOptions',
  'UsbInTransferResult',
  'UsbOutTransferResult',
  'UsbRecipient',
  'UsbRequestType',
  'Window',
  'WorkerGlobalScope',
  'WorkerNavigator',
]

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
async-channel = "2.3"
criterion = { version = "0.5", features = ["html_reports"] }
easy-parallel = "3.3"
float-cmp = "0.10"
rand = "0.9"
vulkano-shaders = { version = "0.35" }

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
panic = "abort"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
