[package]
name = "futuresdr-frontend"
version = "0.1.0"
authors = ["Bastian Bloessl <mail@bastibl.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
futuresdr-pmt = { path = "../pmt" }
gloo-console = "0.2.1"
gloo-timers = { version = "0.2.2", features = ["futures"] }
gloo-utils = "0.1.2"
js-sys = "0.3.52"
rbl_circular_buffer = "0.1.2"
reqwasm = "0.4.0"
serde_json = "1.0.75"
wasm-bindgen = "0.2.78"
yew = "0.19"

[dependencies.web-sys]
version = "0.3.52"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
]