[package]
name = "futuresdr-frontend"
version = "0.0.4"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/futuresdr/"
description = "Web Frontend for an Experimental Async SDR Runtime for Heterogeneous Architectures."
keywords = ["sdr", "radio", "runtime", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science", "wasm"]

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
futures = "0.3.19"
futuresdr-pmt = { path = "../pmt", version = "0.0.7" }
gloo-console = "0.2.1"
gloo-render = "0.1.0"
gloo-timers = { version = "0.2.2", features = ["futures"] }
gloo-utils = "0.1.2"
js-sys = "0.3.52"
rbl_circular_buffer = "0.1.2"
reqwasm = "0.5.0"
serde_json = "1.0.81"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
yew = "0.19"

[dependencies.web-sys]
version = "0.3.52"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
]
