[package]
name = "futuredsp"
version = "0.0.6"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/futuresdr/"
readme = "README.md"
description = "A signal processing library for SDR and real-time DSP."
keywords = ["sdr", "radio", "runtime", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science", "wasm"]

[dependencies]
num-complex = "0.4.0"
num-traits = "0.2"
log = "0.4"

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
criterion = { version = "0.4.0", features = [ "html_reports" ] }
rand = "0.8.4"

[[bench]]
name = "benchmarks"
harness = false
