[package]
name = "futuresdr-macros"
version = "0.0.1"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/futuresdr/"
description = "Macros for FutureSDR"
keywords = ["sdr", "radio", "runtime", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science", "wasm"]

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.98", features=["full"]}
quote = "1.0"