[package]
name = "futuresdr-pmt"
version = "0.0.2"
authors = ["Bastian Bloessl <mail@bastibl.net>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/futuresdr/"
description = "An Experimental Async SDR Runtime for Heterogeneous Architectures."
keywords = ["sdr", "radio", "runtime", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science", "wasm"]

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }

[dev-dependencies]
flexbuffers = "2.0.0"