[package]
name = "futuresdr-pmt"
version = "0.0.7"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/futuresdr/"
description = "Polymorphic Types for an Experimental Async SDR Runtime for Heterogeneous Architectures."
keywords = ["sdr", "radio", "runtime", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science", "wasm"]

[dependencies]
dyn-clone = "1.0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
flexbuffers = "2.0.0"
