[package]
name = "futuredsp"
version = "0.0.9-dev"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
edition = "2024"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/futuresdr/"
readme = "README.md"
description = "A signal processing library for SDR and real-time DSP."
keywords = ["sdr", "radio", "runtime", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science", "wasm"]

[features]
default = ["gpl-code"]
gpl-code = []

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
tracing = "0.1"

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rand = "0.9"

[[bench]]
name = "benchmarks"
harness = false
