[package]
name = "prophecy"
version = "0.5.0-dev"
edition = "2024"
license = "Apache-2.0"
description = "FutureSDR GUI"

[workspace]

[dependencies]
any_spawner = { version = "0.3", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1"
futures = "0.3"
futuresdr = { version = "0.0.40-dev", path = "../../" }
futuresdr-types = { version = "0.0.15-dev", path = "../types/" }
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
indexmap = "2.11"
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr", "nightly"] }
log = "0.4"
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1.18", features = ["v4", "js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    'DomRect',
    'HtmlCanvasElement',
    'ImageData',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGl2RenderingContext',
    'WebGlShader',
    'WebGlTexture',
    'WebGlUniformLocation',
]

