[package]
name = "futuresdr-remote"
version = "0.0.7-dev"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
edition = "2024"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/futuresdr/"
description = "Remote interaction library for FutureSDR."
keywords = ["sdr", "radio", "runtime", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science", "wasm"]

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futuresdr-types = { version = "0.0.15-dev", path = "../types/" }
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread"] }

