[package]
name = "telemetry"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust.git" }
opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", features = ["rt-tokio", "metrics", "logs"] }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", features = ["http-proto", "reqwest-client", "logs"] }
opentelemetry-appender-tracing = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", default-features = false}
opentelemetry-appender-log = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", default-features = false}
opentelemetry-semantic-conventions = { git = "https://github.com/open-telemetry/opentelemetry-rust.git" }
log = { version = "*" }
once_cell = { version = "*" }

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread"] }