[package]
name = "telemetry"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = { version = "*" }

tracing = { version = "0.1", features = ["std"]}
tracing-core = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter","registry", "std"] }

opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust.git" }
opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", features = ["rt-tokio", "metrics", "logs"] }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", features = ["http-proto", "reqwest-client", "logs"] }
# opentelemetry-stdout = { git = "https://github.com/open-telemetry/opentelemetry-rust.git" , features = ["metrics"] }
opentelemetry-appender-tracing = { git = "https://github.com/open-telemetry/opentelemetry-rust.git", default-features = false}
opentelemetry-semantic-conventions = { git = "https://github.com/open-telemetry/opentelemetry-rust.git" }

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread"] }