[package]
name = "futuresdr-types"
version = "0.0.11"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/futuresdr/"
description = "Polymorphic Types for an Experimental Async SDR Runtime for Heterogeneous Architectures."
keywords = ["sdr", "radio", "runtime", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science", "wasm"]

[dependencies]
dyn-clone = "1.0"
num-complex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
flexbuffers = "2.0"
