[package]
name = "futuresdr-types"
version = "0.0.15-dev"
authors = ["FutureSDR Contributors <team@futuresdr.org>"]
edition = "2024"
license = "Apache-2.0"
homepage = "https://www.futuresdr.org"
repository = "https://github.com/futuresdr/futuresdr/"
description = "Polymorphic Types for an Experimental Async SDR Runtime for Heterogeneous Architectures."
keywords = ["sdr", "radio", "runtime", "async", "acceleration"]
categories = ["asynchronous", "concurrency", "hardware-support", "science", "wasm"]

[features]
default = []
# Provides support for converting seify types into Pmt variants.
seify = ["dep:seify"]

[dependencies]
dyn-clone = "1.0"
num-complex = { version = "0.4", features = ["serde"] }
seify = { version = "0.18", default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
flexbuffers = "25.9"
