[package]
name = "adsb_demod"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "listen-adsb"
path = "src/bin/listen_adsb.rs"

[features]
default = ["soapy"]
aaronia_http = ["futuresdr/aaronia_http"]
rtlsdr = ["futuresdr/rtlsdr"]
soapy = ["futuresdr/soapy"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
futuresdr = { path = "../..", features = ["seify"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0"
env_logger = "0.10.0"
adsb_deku = "0.6.3"
