[package]
name = "adsb_demod"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "listen-adsb"
path = "src/bin/listen_adsb.rs"

[features]
default = ["soapy"]
aaronia_http = ["futuresdr/aaronia_http"]
rtlsdr = ["futuresdr/rtlsdr"]
soapy = ["futuresdr/soapy"]

[dependencies]
adsb_deku = "0.7"
clap = { version = "4", features = ["derive"] }
futuresdr = { path = "../..", features = ["seify"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
