[package]
name = "futuresdr-android"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
futuresdr = { path = "../..", features = ["audio", "soapy"] }
jni = { version = "0.21" }

# upstream has bogus cast that avoid Android build
[patch.crates-io]
soapysdr = { git = "https://github.com/bastibl/rust-soapysdr.git" }
