[package]
name = "futuresdr-burn"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
burn = { version = "0.17.0", features = ["ndarray", "tui", "train", "wgpu", "webgpu", "autotune", "fusion"] }
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ndarray-npy = "0.9"
log = "0.4"
