[package]
name = "cw"
version = "0.0.1"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tx-sdr"
path = "src/bin/tx_sdr.rs"
required-features = ["soapy"]

[[bin]]
name = "rx-sdr"
path = "src/bin/rx_sdr.rs"
required-features = ["soapy"]

[[bin]]
name = "tx-audio"
path = "src/bin/tx_audio.rs"

[[bin]]
name = "rx-audio"
path = "src/bin/rx_audio.rs"
required-features = ["soapy"]

[features]
default = []
soapy = ["futuresdr/soapy"]
zmq = ["futuresdr/zeromq"]

[dependencies]
bimap = "0.6.2"
futuredsp = { path = "../../futuredsp" }
futuresdr = { path = "../..", features = ["audio"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.0.19", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
