[package]
name = "cw"
version = "0.0.1"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
futuresdr = { path = "../..", features = ["audio"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.7", features = ["csr", "nightly"] }
