[package]
name = "debug"
version = "0.0.1"
edition = "2021"

[workspace]

[[bin]]
name = "oscillators"
path = "oscillators.rs"

[[bin]]
name = "panic"
path = "panic.rs"

[[bin]]
name = "tag_debug"
path = "tag_debug.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
futuresdr = { path = "../..", features = ['flow_scheduler', 'tpb_scheduler']}

