[package]
name = "futuresdr-egui"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["soapy"]
aaronia_http = ["futuresdr/aaronia_http"]
soapy = ["futuresdr/soapy"]

[dependencies]
eframe = "0.27"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
futuresdr = { path = "../..", features = ["seify"] }
futuresdr-remote = { path = "../../crates/remote/" }
tokio = { version = "1", features = ["full"] }
tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }

